--- a/Code Busters/home.html
+++ b/Code Busters/home.html
@@ -4,16 +4,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Moro Gym</title>
-	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
 	 crossorigin="anonymous">
 	</script>
+
+	<link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
 <body>
@@ -21,6 +25,7 @@
 		<div class="primary-navigation">
 			<div class="header-nav">
 				<div class="header-nav-img">
+					<img src="photos/Group 38.png" alt="">
 				</div>
 				<div class="header-nav-title">
 					<p class="header-title-text">
@@ -35,21 +40,36 @@
 				</div>
 			</div>
 			<div class="nav-buttons">
-				<ul>
+				<ul id="vertmenu">
 					<li>
-						<a href="home.html" class="active">Home</a>
+						<span class="home-link">
+							<a href="home.html" class="active">
+								<img src="photos/home.png" alt=""> Home</a>
+						</span>
 					</li>
 					<li>
-						<a href="addnew.html">Add New Member</a>
+						<span class="add-link">
+							<a href="addnew.html">
+								<img src="photos/adduser.png" alt="">Add New Member</a>
+						</span>
 					</li>
 					<li>
-						<a href="members.html">List of Members</a>
+						<span class="members-link"></span>
+						<a href="members.html">
+							<img src="photos/list.png" alt="">List of Members</a>
+						</span>
 					</li>
 					<li>
-						<a href="sales.html">Sales Report</a>
+						<span class="sales-link">
+							<a href="sales.html">
+								<img src="photos/report.png" alt="">Sales Report</a>
+						</span>
 					</li>
 					<li>
-						<a onclick="logout()">Logout</a>
+						<span class="logout-link">
+							<a onclick="logout()">
+								<img src="photos/logout.png" alt="">Logout</a>
+						</span>
 					</li>
 				</ul>
 			</div>
@@ -68,7 +88,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-						<button type="button" class="btn btn-primary">Yes</button>
+						<button type="button" class="btn btn-primary" onclick="addvisit()">Yes</button>
 					</div>
 				</div>
 			</div>
@@ -87,70 +107,69 @@
 			<div class="big-box">
 				<div class="time-box">
 					<label for="time-in" class="time">Time-in:</label>
-					<input type="text" id="time-in" placeholder="Input Name (Surname, Name)">
+					<input type="text" id="time-in" class="home" placeholder="Input Name (Surname, Name)">
 					<button class="black-solid-btn" data-toggle="modal" data-target="#exampleModalCenter">Enter</button>
 					<br/>
 					<label for="time-out" class="time">Time-out:</label>
-					<input type="text" id="time-out" placeholder="Input Name (Surname, Name)">
+					<input type="text" id="time-out" class="home" placeholder="Input Name (Surname, Name)">
 					<button class="black-solid-btn" data-toggle="modal" data-target="#exampleModalCenter">Enter</button>
 					<br/>
 					<hr/>
 					<label for="time-in" class="time">Walk-in Client</label>
-					<input type="text" id="time-in" placeholder="Input Name (Surname, Name)">
+					<input type="text" id="w-time-in" class="home" placeholder="Input Name (Surname, Name)">
 					<button class="black-solid-btn" data-toggle="modal" data-target="#exampleModalCenter">Enter</button>
 					<br/>
-					<label class="checkbox-inline">
-						<input type="checkbox" value="">Boxing
-					</label>
-					<label class="checkbox-inline">
-						<input type="checkbox" value="">Circuit Training
-					</label>
-					<label class="checkbox-inline">
-						<input type="checkbox" value="">Gym
-					</label>
-					<label class="checkbox-inline">
-						<input type="checkbox" value="">Yoga
-					</label>
+					<div class="checkboxes" id="checkboxes">
+						<p>
+							<label>
+								<input type="checkbox" id="boxing" value="boxing" />
+								<span>Boxing</span>
+							</label>
+						</p>
+						<p>
+							<label>
+								<input type="checkbox" id="circuit" value="circuit training" />
+								<span>Circuit Training</span>
+							</label>
+						</p>
+						<p>
+							<label>
+								<input type="checkbox" id="gym" value="gym" />
+								<span>Gym</span>
+							</label>
+						</p>
+						<p>
+							<label>
+								<input type="checkbox" id="yoga" value="yoga" />
+								<span>Yoga</span>
+							</label>
+						</p>
+					</div>
+
+
+
+
+
+
 				</div>
 				<button class="yellow-ghost-btn">
 					<a href="seelist.html">See full list</a>
 				</button>
 			</div>
 			<h2>Weekly Report</h2>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>ID Number</th>
-						<th>Member's Name</th>
-						<th>Expiration Date</th>
-						<th>Status</th>
-						<th>Contact Number</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>John</td>
-						<td>Doe</td>
-						<td>john@example.com</td>
-						<td>john@example.com</td>
-						<td>john@example.com</td>
-					</tr>
-					<tr>
-						<td>Mary</td>
-						<td>Moe</td>
-						<td>mary@example.com</td>
-						<td>john@example.com</td>
-						<td>john@example.com</td>
-					</tr>
-					<tr>
-						<td>July</td>
-						<td>Dooley</td>
-						<td>july@example.com</td>
-						<td>john@example.com</td>
-						<td>john@example.com</td>
-					</tr>
-				</tbody>
-			</table>
+			<div id="weekly-report">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>ID Number</th>
+							<th>Member's Name</th>
+							<th>Expiration Date</th>
+							<th>Status</th>
+							<th>Contact Number</th>
+						</tr>
+					</thead>
+				</table>
+			</div>
 		</div>
 	</div>
 </body>
@@ -164,6 +183,60 @@
 		};
 		xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
 		xhttp.send();
+	}
+</script>
+<script>
+	function addvisit() {
+		var xhttp = new XMLHttpRequest();
+		var w_time_in = document.getElementById("w-time-in").value;
+		var package_walkin = document.getElementById("checkboxes").value;
+		xhttp.onreadystatechange = function () {
+			if (this.readyState == 4 && this.status == 200) {
+				location.href = "home.html";
+				alert(this.response);
+				alert("success")
+			}
+		};
+		xhttp.open("POST", "http://moro-system.herokuapp.com/visits", true);
+		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		xhttp.send("w_time_in" + w_time_in + "&package.walkin=" + package_walkin);
+	}
+</script>
+<script>
+	function weeklyReport() {
+		var xhttp = new XMLHttpRequest();
+		xhttp.onreadystatechange = function () {
+			if (this.readyState == 4 && this.status == 200) {
+				var tbl = $("<table/>").attr("id", "mytable").attr("class", "table table-striped");
+				$("#weekly-report").append(tbl);
+				$("#mytable").append(`
+						<thead>
+						<tr>
+						<th>ID Number</th>
+						<th>Member's Name</th>
+						<th>Expiration Date</th>
+						<th>Status</th>
+						<th>Contact Number</th>
+					</tr>
+				</thead>`);
+				for (var i = 0; i < obj.length; i++) {
+					var tr = "<tr>";
+					var td1 = "<td>" + obj[i]["id"] + "</td>";
+					var td2 = "<td>" + obj[i]["lastname" + " firstname" + " mi"] + "</td>";
+					var td3 = "<td>" + obj[i]["contract_end"] + "</td>";
+					var td4 = "<td>" + obj[i]["membership_card_status"] + "</td>";
+					var td5 = "<td>" + obj[i]["mobile_number"] + "</td></tr>";
+
+
+					$("#mytable").append(tr + td1 + td2 + td3 + td4 + td5);
+				}
+			};
+			xhttp.open("GET", "http://moro-system.herokuapp.com/members/weekly_report", true);
+			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhttp.send();
+
+			weeklyReport();
+		}
 	}
 </script>
 
