--- a/Code Busters/index.html
+++ b/Code Busters/index.html
@@ -11,13 +11,13 @@
 		integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
 		crossorigin="anonymous">
 	</script>
-	<script>
+	<!-- <script>
 		function checkIfLoggedIn(){
 			var xhttp = new XMLHttpRequest();
   		xhttp.onreadystatechange = function() {
 				if (this.readyState == 4 && this.status == 200) {
 					alert(this.response)
-					if (this.response !== "false")
+					if (this.response != "false")
 						window.location.href = "home.html";
 				}
   		};
@@ -25,11 +25,13 @@
 			xhttp.send();
 		}
 		checkIfLoggedIn();
-	</script>
+	</script> -->
 </head>
 <body>
 <div class="black-box">
+		<img src="photos/Group 55.png" alt="" class="landing-img">
 </div>
+
 <div class="yellow-box">
 	<div class="login-details">
 		<input type="text" placeholder="username" class="login-input" id="username"> <br>
