--- a/Code Busters/sales.html
+++ b/Code Busters/sales.html
@@ -6,9 +6,10 @@
 	<title>Moro Gym</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
@@ -21,6 +22,7 @@
 		<div class="primary-navigation">
 			<div class="header-nav">
 				<div class="header-nav-img">
+						<img src="photos/Group 38.png" alt="">
 				</div>
 				<div class="header-nav-title">
 					<p class="header-title-text">
@@ -35,24 +37,39 @@
 				</div>
 			</div>
 			<div class="nav-buttons">
-				<ul>
-					<li>
-						<a href="home.html">Home</a>
-					</li>
-					<li>
-						<a href="addnew.html">Add New Member</a>
-					</li>
-					<li>
-						<a href="members.html">List of Members</a>
-					</li>
-					<li>
-						<a href="sales.html" class="active">Sales Report</a>
-					</li>
-					<li>
-						<a onclick="logout()">Logout</a>
-					</li>
-				</ul>
-			</div>
+					<ul id="vertmenu">
+						<li>
+							<span class="home-link">
+								<a href="home.html">
+									<img src="photos/home.png" alt=""> Home</a>
+							</span>
+						</li>
+						<li>
+							<span class="add-link">
+								<a href="addnew.html">
+									<img src="photos/adduser.png" alt="">Add New Member</a>
+							</span>
+						</li>
+						<li>
+							<span class="members-link"></span>
+							<a href="members.html">
+								<img src="photos/list.png" alt="">List of Members</a>
+							</span>
+						</li>
+						<li>
+							<span class="sales-link">
+								<a href="sales.html"  class="active">
+									<img src="photos/report.png" alt="">Sales Report</a>
+							</span>
+						</li>
+						<li>
+							<span class="logout-link">
+								<a onclick="logout()">
+									<img src="photos/logout.png" alt="">Logout</a>
+							</span>
+						</li>
+					</ul>
+				</div>
 		</div>
 		<div class="page-content">
 			<p class="date">
@@ -66,7 +83,7 @@
 				</script>
 			</p>
 			<h2 class="page-title"> Sales Report </h2>
-			<div class="members-header">
+			<div class="members-header sales-header">
 				<div class="member-title">
 					<input type="date" id="myDate">
 					<label for="">to</label>
@@ -79,8 +96,8 @@
 					</button>
 				</div>
 			</div>
-			<div id="div2">
-				<!-- <table class="table table-striped">
+			<div id="div2 ">
+				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>ID Number</th>
@@ -109,10 +126,11 @@
 							<td>john@example.com</td>
 						</tr>
 					</tbody>
-				</table> -->
+				</table>
 			</div>
 		</div>
 	</div>
+
 	<script>
 		function showsales() {
 			var xhttp = new XMLHttpRequest();
@@ -161,6 +179,7 @@
 			xhttp.send();
 		}
 	</script>
+
 </body>
 
 </html>
