--- a/Code Busters/viewmember.html
+++ b/Code Busters/viewmember.html
@@ -6,9 +6,10 @@
 	<title>Moro Gym</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
@@ -18,12 +19,10 @@
 
 <body>
 	<div id="container">
-		<div class="popup">
-			<span class="popuptext" id="myPopup">Member has been successfully added!</span>
-		</div>
 		<div class="primary-navigation">
 			<div class="header-nav">
 				<div class="header-nav-img">
+						<img src="photos/Group 38.png" alt="">
 				</div>
 				<div class="header-nav-title">
 					<p class="header-title-text">
@@ -38,24 +37,39 @@
 				</div>
 			</div>
 			<div class="nav-buttons">
-				<ul>
-					<li>
-						<a href="home.html">Home</a>
-					</li>
-					<li>
-						<a href="addnew.html">Add New Member</a>
-					</li>
-					<li>
-						<a href="members.html">List of Members</a>
-					</li>
-					<li>
-						<a href="sales.html">Sales Report</a>
-					</li>
-					<li>
-						<a onclick="logout()">Logout</a>
-					</li>
-				</ul>
-			</div>
+					<ul id="vertmenu">
+						<li>
+							<span class="home-link">
+								<a href="home.html" >
+									<img src="photos/home.png" alt=""> Home</a>
+							</span>
+						</li>
+						<li>
+							<span class="add-link">
+								<a href="addnew.html">
+									<img src="photos/adduser.png" alt="">Add New Member</a>
+							</span>
+						</li>
+						<li>
+							<span class="members-link"></span>
+							<a href="members.html" class="active">
+								<img src="photos/list.png" alt="">List of Members</a>
+							</span>
+						</li>
+						<li>
+							<span class="sales-link">
+								<a href="sales.html">
+									<img src="photos/report.png" alt="">Sales Report</a>
+							</span>
+						</li>
+						<li>
+							<span class="logout-link">
+								<a onclick="logout()">
+									<img src="photos/logout.png" alt="">Logout</a>
+							</span>
+						</li>
+					</ul>
+				</div>
 		</div>
 		<div class="page-content">
 			<p class="date">
@@ -68,7 +82,7 @@
 					document.write(month + " " + day + ", " + year)		
 				</script>
 			</p>
-			<h2 class="page-title">Add New Member</h2>
+			<h2 class="page-title">Member's Profile</h2>
 			<div class="add-new-box">
 				<div class="add-photo">
 					<a href="" data-toggle="modal" data-target="#exampleModalCenter">
@@ -137,24 +151,7 @@
 			</div>
 			<button class="black-solid-btn float-btn" onclick="addMember()">Confirm</button>
 		</div>
-	</div>
-	<script>
-		function addMember() {
-			var xhttp = new XMLHttpRequest();
-			var username = document.getElementById("username").value;
-			var password = document.getElementById("password").value;
-			xhttp.onreadystatechange = function () {
-				if (this.readyState == 4 && this.status == 200) {
-					console.log(this.response);
-					var popup = document.getElementById("myPopup");
-					popup.classList.toggle("show");
-				}
-			};;
-			xhttp.open("POST", "http://moro-system.herokuapp.com/admins/login", true);
-			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			xhttp.send("username=" + username + "&password=" + password);
-		}
-	</script>
+	</div>	
 	<script>
 		function logout() {
 			var xhttp = new XMLHttpRequest();
@@ -166,6 +163,21 @@
 			xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
 			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			xhttp.send();
+		}
+	</script>
+	<script>
+		function showMember(){
+			var xhttp = new XMLHttpRequest();
+			xhttp.onreadystatechange = function () {
+				if (this.readyState == 4 && this.status == 200) {
+					location.href = "members.html";
+				}
+			};
+			xhttp.open("GET", "http://moro-system.herokuapp.com/members/id", true);
+			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhttp.send();
+
+			showMember();
 		}
 	</script>
 </body>
