--- a/Code Busters/members.html
+++ b/Code Busters/members.html
@@ -6,16 +6,16 @@
 	<title>Moro Gym</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	 crossorigin="anonymous">
-	<script scr="js/clock.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script scr="js/clock.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
 	 crossorigin="anonymous">
 	</script>
+
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -24,6 +24,7 @@
 		<div class="primary-navigation">
 			<div class="header-nav">
 				<div class="header-nav-img">
+					<img src="photos/Group 38.png" alt="">
 				</div>
 				<div class="header-nav-title">
 					<p class="header-title-text">
@@ -38,21 +39,36 @@
 				</div>
 			</div>
 			<div class="nav-buttons">
-				<ul>
+				<ul id="vertmenu">
 					<li>
-						<a href="home.html">Home</a>
+						<span class="home-link">
+							<a href="home.html">
+								<img src="photos/home.png" alt=""> Home</a>
+						</span>
 					</li>
 					<li>
-						<a href="addnew.html">Add New Member</a>
+						<span class="add-link">
+							<a href="addnew.html">
+								<img src="photos/adduser.png" alt="">Add New Member</a>
+						</span>
 					</li>
 					<li>
-						<a href="members.html" class="active">List of Members</a>
+						<span class="members-link"></span>
+						<a href="members.html" class="active">
+							<img src="photos/list.png" alt="">List of Members</a>
+						</span>
 					</li>
 					<li>
-						<a href="sales.html">Sales Report</a>
+						<span class="sales-link">
+							<a href="sales.html">
+								<img src="photos/report.png" alt="">Sales Report</a>
+						</span>
 					</li>
 					<li>
-						<a onclick="logout()">Logout</a>
+						<span class="logout-link">
+							<a onclick="logout()">
+								<img src="photos/logout.png" alt="">Logout</a>
+						</span>
 					</li>
 				</ul>
 			</div>
@@ -68,16 +84,16 @@
 					document.write(month + " " + day + ", " + year)		
 				</script>
 			</p>
-			<input type="text" placeholder="Search..">
+			<input type="text" placeholder="Search.." class="searchbar">
 			<div class="members-header">
 				<div class="member-title">
 					<h2> List of Members </h2>
 				</div>
 				<div class="members-buttons">
-					<a href="">
+					<a href="" data-toggle="modal" data-target="#emailModalCenter">
 						<img src="photos/email.png" alt="">
 					</a>
-					<button class="red-ghost-btn">
+					<button class="red-ghost-btn" data-toggle="modal" data-target="#deleteModalCenter">
 						DELETE ALL INACTIVE
 					</button>
 					<img src="photos/printer.png" alt="printer icon">
@@ -104,8 +120,8 @@
 				</div>
 			</div>
 			<div id="div1">
-				<!-- <table class="table table-striped" id="mytable"> -->
-				<!-- <thead>
+				<table class="table table-striped" id="mytable">
+					<thead>
 						<tr>
 							<th>ID Number</th>
 							<th>Client Name</th>
@@ -166,19 +182,69 @@
 								<button class="btn btn-danger">Delete</button>
 							</td>
 						</tr>
-					</tbody> -->
-				<!-- </table> -->
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="emailModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="modal-title" id="exampleModalLongTitle">Send an Email Message</h3>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<textarea type="text" placeholder="Type something here" class=" email-modal"></textarea>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary" onclick="emailMembers()">Yes</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="modal-title" id="exampleModalLongTitle">Deleting Members</h3>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Are you sure you want to delete all inactive members?</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary" onclick="deleteMembers()">Yes</button>
+				</div>
 			</div>
 		</div>
 	</div>
 	<script>
-		function showmembers() {
+		function deleteMembers() {
 			var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function () {
 				if (this.readyState == 4 && this.status == 200) {
-					var tbl = $("<table/>").attr("id", "mytable").attr("class", "table table-striped");
-					$("#div1").append(tbl);
-					$("#mytable").append(`
+					alert(this.response);
+				}
+			};
+			xhttp.open("DELETE", "http://moro-system.herokuapp.com/inactive", true);
+			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhttp.send();
+	</script>
+	<script>
+				function showmembers() {
+					var xhttp = new XMLHttpRequest();
+					xhttp.onreadystatechange = function () {
+						if (this.readyState == 4 && this.status == 200) {
+							var tbl = $("<table/>").attr("id", "mytable").attr("class", "table table-striped");
+							$("#div1").append(tbl);
+							$("#mytable").append(`
 						<thead>
 						<tr>
 						<th>ID Number</th>
@@ -191,47 +257,48 @@
 						<th>Delete</th>
 					</tr>
 				</thead>`);
-					for (var i = 0; i < obj.length; i++) {
-						var tr = "<tr>";
-						var td1 = "<td>" + obj[i]["id"] + "</td>";
-						var td2 = "<td>" + obj[i]["lastname" + " firstname" + " mi"] + "</td>";
-						var td3 = "<td>" + obj[i]["membership_status"] + "</td>";
-						var td4 = "<td>" + obj[i]["membership_card_status"] + "</td>";
-						var td5 = "<td>" + obj[i]["activity"] + "</td>";
-						var td6 = `<td>
+							for (var i = 0; i < obj.length; i++) {
+								var tr = "<tr>";
+								var td1 = "<td>" + obj[i]["id"] + "</td>";
+								var td2 = "<td>" + obj[i]["lastname" + " firstname" + " mi"] + "</td>";
+								var td3 = "<td>" + obj[i]["membership_status"] + "</td>";
+								var td4 = "<td>" + obj[i]["membership_card_status"] + "</td>";
+								var td5 = "<td>" + obj[i]["activity"] + "</td>";
+								var td6 = `<td>
 							<button class="btn btn-info">View</button>
 						</td>`;
-						var td7 = `	<td>
+								var td7 = `	<td>
 							<button class="btn btn-primary">Edit</button>
 						</td>`;
-						var td8 = `	<td>
+								var td8 = `	<td>
 							<button class="btn btn-danger">Delete</button>
-						</td>`;
+						</td></tr>`;
 
-						$("#mytable").append(tr + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8);
+								$("#mytable").append(tr + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8);
 
-					}
+							}
+						}
+					};
+					xhttp.open("GET", "http://moro-system.herokuapp.com/members", true);
+					xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+					xhttp.send();
+
+					showmembers();
 				}
-			};
-			xhttp.open("GET", "http://moro-system.herokuapp.com/members", true);
-			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			xhttp.send();
-
-			showmembers();
-		}
 	</script>
 	<script>
-		function logout() {
-			var xhttp = new XMLHttpRequest();
-			xhttp.onreadystatechange = function () {
-				if (this.readyState == 4 && this.status == 200) {
+			function logout() {
+				var xhttp = new XMLHttpRequest();
+				xhttp.onreadystatechange = function () {
+					if (this.readyState == 4 && this.status == 200) {
 
-					location.href = "index.html";
-				}
-			};
-			xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
-			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			xhttp.send();
+						location.href = "index.html";
+					}
+				};
+				xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
+				xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				xhttp.send();
+			}
 		}
 	</script>
 </body>
